--- a/views/pages/resources.ejs
+++ b/views/pages/resources.ejs
@@ -10,18 +10,18 @@
   <%- include('../partials/header', {title:resources_data.title, subheading: 'Resources'}) %>
   <div>
     <h3>
-      - <a href="https://shiverguide.info">Shiverguide.info</a>
+      - <a href="https://shiverguide.info">The Shiver Guide</a>
     </h3>
     <p>
-      Explains the Shiver Methodology.
+      An introduction to the Shiver Methodology, the community strategy used by <a href="https://bluesharkfriends.com/">Blue Shark Friends</a>.
     </p>
   </div>
   <div>
     <h3>
-      - <a href="https://shivernet.social">Shivernet.social</a>
+      - <a href="https://shivernet.social">The Shivernet Homepage</a>
     </h3>
     <p>
-      Introduces the Shivernet and acts as a landing page for organizing community.
+      A landing page for organizing digital community.
     </p>
   </div>
   <div>
