--- a/css/style.css
+++ b/css/style.css
@@ -229,6 +229,7 @@ footer {
   background-color: #192738;
   padding: 10px;
   margin-bottom: 5px;
+  border-radius: 20px;
 }
 
 .tool-header {
@@ -261,7 +262,8 @@ footer {
 
 .tools-img {
   float: left;
-  padding-right: 10px;
+  margin-right: 10px;
+  border-radius: 30%;
 }
 
 .tool-download {
