--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,11 @@
 <footer>
 <small>Copyright &copy; <%= branding_data.copyright_year %>, <%= branding_data.copyright_holder %>. All rights reserved.</small>
+<br />
+<small>
+    <a href="https://bluesharkfriends.com/termsofservice">Terms of Service</a> |
+    <a href="https://bluesharkfriends.com/privacypolicy">Privacy Policy</a> |
+    <a href="https://bluesharkfriends.com/trademarkpolicy">Trademark Policy</a>
+</small>
 </footer>
 
 <div class="poweredby">
